# Omni-swarm

./: .gitignore  .gitmodules  README.md
distributed_pose_graph/: CMakeLists.txt  package.xml
distributed_pose_graph/src/: distributed_pose_graph.cpp
distributed_solver/: CMakeLists.txt  package.xml
distributed_solver/include/distributed_solver/: DGS_solver.hpp  base_solver.hpp  centralized_solver.hpp  distributed_solver.hpp
distributed_solver/src/: DGS_solver.cpp  base_solver.cpp  centralized_solver.cpp  distributed_solver.cpp  distributed_solver_test.cpp
localization_proxy/: CMakeLists.txt  package.xml
localization_proxy/include/common/: version.h
localization_proxy/include/swarm/: mavlink_msg_drone_status.h  mavlink_msg_node_detected.h  mavlink_msg_node_relative_fused.h  mavlink_msg_swarm_remote_command.h  version.h
localization_proxy/launch/: uwb_comm-test.launch  uwb_comm.launch  wifi_comm.launch
localization_proxy/scripts/: odometry_transfer.py  remote_recv_count.py  visualize_swarm_frame.py
localization_proxy/src/: localization_proxy.cpp
swarm_detection/: CMakeLists.txt  package.xml
swarm_detection/config/: minimal_config.yaml
swarm_detection/include/swarm_detection/: drone_pose_costfunc.h  drone_pose_estimator.h  local_pose_parameter.h  swarm_detect_types.h  swarm_detection.h
swarm_detection/launch/: swarm_detect-debug.launch  swarm_detect-pc.launch  swarm_detect.launch
swarm_detection/src/: drone_pose_estimator.cpp  swarm_detection.cpp  swarm_detection_node.cpp  swarm_detection_test.cpp
swarm_detection/utils/: aruco_marker_template.tex
swarm_localization/: CMakeLists.txt  package.xml
swarm_localization/DataAnalysis/: JPGTest.ipynb  bag_tools.ipynb  loop_accurate_analyze.ipynb  未命名.ipynb
swarm_localization/config/: 5drone-sim.rviz  5drone-vicon.rviz  5drone.rviz  swarm_nodes.yaml  swarm_nodes20.yaml  swarm_nodes5.yaml  swarm_nodes_test.1.yaml  swarm_nodes_test.yaml
swarm_localization/data/: 2019-3-6-fast-circle.csv  2019-3-6-slow-circle.csv  2019-3-6-sweep-hover-y.csv  CG_fix_circle_2s.csv  circle-3s-gc-fix.csv  circle-3s-no-gc-fix.csv  hover_vicon_uwb.csv  manual_vel_control.csv  realsense_2019_5_15_loop.csv  sweep-2019-3-8.csv  vsp_to_pos_freqres.csv  vsp_to_vel_freqres.csv  vz_sp_to_vz_freqres.csv
swarm_localization/include/swarm_localization/: localization_DA_init.hpp  localiztion_costfunction.hpp  outlier_rejection.hpp  swarm_localization.hpp  swarm_localization_factors.hpp  swarm_localization_params.hpp  swarm_localization_solver.hpp  swarm_outlier_rejection.hpp  swarm_relpose_costfunc.h  swarm_types.hpp
swarm_localization/launch/: bag-replay.launch  bag_replay.launch  bag_replay_debug.launch  bag_replay_level1.launch  local-5-drone.launch  loop-5-drone-debug.launch  loop-5-drone-offline.launch  loop-5-drone-pc.launch  loop-5-drone.launch  loop-5-pc-outdoor.launch  loop-5-pc.launch  loop-5-sim.launch  simulator.launch  stereo_MULTI.launch  test.launch  test_10_nodes-debug.launch  test_10_nodes.launch  viz-local-5-drone.launch
swarm_localization/scripts/: bagparse.py  helper.py  local_plot.py  play_bag.sh  play_bags.sh  rc_expo.py  relative_fused_vicon_convert.py  reproject_drone.py  run_bag_replay.sh  run_docker.sh  swarm_fix_odom.py  swarm_tx2_helper.py  swarm_vo_visualize.py  sync_rosplay.py  test_vo_datagen.py  test_vo_uwb.py  utils.py  yaw_analyze.py
swarm_localization/src/: localization_DA_init.cpp  swarm_localization.cpp  swarm_localization_node.cpp  swarm_localization_solver.cpp
swarm_localization/src/swarm_outlier_rejection/: swarm_outlier_rejection.cpp
swarm_localization/test/: fisheye_undist.hpp  swarm_local_sim.cpp
swarm_loop/: CMakeLists.txt  README.md  convert_frozen_trt.ipynb  convert_saved_tf2.ipynb  inference_tf2_trt.ipynb  nodelet_plugins.xml  package.xml  pca.ipynb
swarm_loop/include/: loop_cam.h  loop_defines.h  loop_detector.h  loop_net.h  mobilenetvlad_tensorrt.h  superpoint_tensorrt.h  swarm_loop.h  tensorrt_generic.h
swarm_loop/include/swarm_loop/: loop_cam.h  loop_defines.h  loop_detector.h  loop_net.h  mobilenetvlad_tensorrt.h  superpoint_tensorrt.h  swarm_loop.h  utils.h
swarm_loop/launch/: hfnet_server-TF1.launch  hfnet_server.launch  looop-debug.launch  loop-nodelet-realsense.launch  loop-nodelet-sfisheye.launch  loop-only-frontend-pc.launch  loop-only-nodelet-pc.launch  loop-only-nodelet.launch  loop-only-pc-titan.launch  loop-only-pc.launch  loop-only.launch  loop-only_pc.launch  loop-pc-outdoor.launch  loop-pc.launch  loop-realsense.launch  loop-server.launch  loop.launch  multi_drone_bag.launch  netvlad_server.launch  node-sfisheye.launch  nodelet-sfisheye.launch  pc-outdoor-fisheye.launch  realsense.launch  single_drone.launch  single_drone_debug.launch  superpoint_server.launch  test_swarm_loop.launch  vicar_swarm_loop.launch  vicar_swarm_loop_debug.launch
swarm_loop/scripts/: HFNet_server.py  HFNet_server_TF2.py  udp_receive.py  udp_send.py
swarm_loop/src/: loop_cam.cpp  loop_detector.cpp  loop_net.cpp  loop_params.cpp  loop_tensorrt_test.cpp  mobilenetvlad_tensorrt.cpp  superpoint_tensorrt.cpp  swarm_loop.cpp  swarm_loop_node.cpp  swarm_loop_nodelet.cpp  swarm_loop_spy.cpp  swarm_loop_test.cpp  tensorrt_generic.cpp
swarm_loop/srv/: HFNetSrv.srv
swarm_msgs/: CMakeLists.txt  lcm_gen_msg.sh  package.xml
swarm_msgs/include/swarm_msgs/: FisheyeFrameDescriptor_t.hpp  ImageDescriptorHeader_t.hpp  ImageDescriptor_t.hpp  LandmarkDescriptorPacket_t.hpp  LandmarkDescriptor_t.hpp  LoopConnection_t.hpp  Point2d_t.hpp  Point3d_t.hpp  (+4 more)
swarm_msgs/msg/: FeatureDescriptor.msg  FisheyeFrameDescriptor.msg  ImageDescriptor.msg  ImageDescriptor_t.lcm  LoopConnection.msg  armarker_corner.msg  armarker_detected.msg  drone_commander_state.msg  drone_onboard_command.msg  drone_pos_ctrl_cmd.msg  incoming_broadcast_data.msg  node_detected.msg  node_detected_xyzyaw.msg  node_frame.msg  remote_uwb_info.msg  swarm_detected.msg  swarm_drone_basecoor.msg  swarm_drone_source_data.msg  swarm_frame.msg  swarm_fused.msg  swarm_fused_relative.msg  swarm_pos_control_state.msg  swarm_remote_command.msg
(+178 files in other folders)
