<?xml version="1.0"?>
<package format="2">
  <name>distributed_pose_graph</name>
  <version>0.0.0</version>
  <description>The distributed_pose_graph package</description>

  <maintainer email="xuhao3e8@gmail.com">xuhao</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>distributed_solver</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>swarm_msgs</build_depend>
  <build_export_depend>distributed_solver</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>swarm_msgs</build_export_depend>
  <exec_depend>distributed_solver</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>swarm_msgs</exec_depend>


  <export>
  </export>
</package>
